remove vuetorrent, add flood

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ provision/lidarr/*
 provision/sonarr/*
 provision/radarr/*
 provision/plex/*
+provision/flood/*
 
 # workspace files are user-specific
 *.sublime-workspace
