--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
   #     - VERSION=docker
   #     - HOSTNAME=”PlexServer”
   #   volumes:
-  #     - ${PROVISION_DIR}/plex:/config
-  #     - ${CONTENT_DIR}/media:/data/media
+  #     - ./provision/plex:/config
+  #     - ./content/media:/data/media
   #   network_mode: host
   #   # ports: # when network: bridge
   #   #   - "32400:32400/tcp"
@@ -36,8 +36,8 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ${PROVISION_DIR}/radarr:/config
-      - ${CONTENT_DIR}:/data
+      - ./provision/radarr:/config
+      - ./content:/data
     ports:
       - "7878:7878"
     restart: unless-stopped
@@ -52,8 +52,8 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ${PROVISION_DIR}/sonarr:/config
-      - ${CONTENT_DIR}:/data
+      - ./provision/sonarr:/config
+      - ./content:/data
     ports:
       - "8989:8989"
     restart: unless-stopped
@@ -68,8 +68,8 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ${PROVISION_DIR}/lidarr:/config
-  #     - ${CONTENT_DIR}:/data
+  #     - ./provision/lidarr:/config
+  #     - ./content:/data
   #   ports:
   #     - "8686:8686"
   #   restart: unless-stopped
@@ -84,7 +84,7 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ${PROVISION_DIR}/prowlarr:/config
+      - ./provision/prowlarr:/config
     ports:
       - 9696:9696
     restart: unless-stopped
@@ -102,7 +102,7 @@ services:
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=America/Edmonton
     volumes:
-      - ${PROVISION_DIR}/flaresolverr:/config
+      - ./provision/flaresolverr:/config
     ports:
       - "${PORT:-8191}:8191"
     restart: unless-stopped
@@ -117,8 +117,8 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ${PROVISION_DIR}/bazarr:/config
-  #     - ${CONTENT_DIR}:/data
+  #     - ./provision/bazarr:/config
+  #     - ./content:/data
   #   ports:
   #     - "6767:6767"
   #   restart: unless-stopped
@@ -132,14 +132,31 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Edmonton
-      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
+      #- DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
     volumes:
-      - ${PROVISION_DIR}/qbittorrent:/config
-      - ${CONTENT_DIR}/torrents:/data/torrents
+      - ./provision/qbittorrent:/config
+      - ./content/torrents:/data/torrents
     ports:
       - 8080:8080
       - 6881:6881
       - 6881:6881/udp
+    restart: unless-stopped
+    networks:
+      - drake-media-network
+  
+  flood:
+    hostname: flood
+    image: jesec/flood
+    container_name: flood
+    user: 1000:1000
+    command: --port 3001 --allowedpath /data
+    environment:
+      - HOME=config
+    volumes:
+      - ./provision/flood:/config
+      - ./content:/data
+    ports:
+      - 127.0.0.1:3001:3001
     restart: unless-stopped
     networks:
       - drake-media-network
@@ -152,7 +169,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ${PROVISION_DIR}/jackett:/config
+  #     - ./provision/jackett:/config
   #   ports:
   #     - "9117:9117"
   #   restart: unless-stopped
@@ -167,7 +184,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ${PROVISION_DIR}/ombi:/config
+  #     - ./provision/ombi:/config
   #   ports:
   #     - "3579:3579"
   #   restart: unless-stopped
@@ -182,7 +199,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ${PROVISION_DIR}/heimdall:/config
+  #     - ./provision/heimdall:/config
   #   ports:
   #     - "80:80"
   #     - "443:443"
