--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
   #     - VERSION=docker
   #     - HOSTNAME=”PlexServer”
   #   volumes:
-  #     - ./provision/plex:/config
-  #     - ./content/media:/data/media
+  #     - ${PROVISION_DIR}/plex:/config
+  #     - ${CONTENT_DIR}/media:/data/media
   #   network_mode: host
   #   # ports: # when network: bridge
   #   #   - "32400:32400/tcp"
@@ -36,8 +36,8 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ./provision/radarr:/config
-      - ./content:/data
+      - ${PROVISION_DIR}/radarr:/config
+      - ${CONTENT_DIR}:/data
     ports:
       - "7878:7878"
     restart: unless-stopped
@@ -52,8 +52,8 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ./provision/sonarr:/config
-      - ./content:/data
+      - ${PROVISION_DIR}/sonarr:/config
+      - ${CONTENT_DIR}:/data
     ports:
       - "8989:8989"
     restart: unless-stopped
@@ -68,8 +68,8 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ./provision/lidarr:/config
-  #     - ./content:/data
+  #     - ${PROVISION_DIR}/lidarr:/config
+  #     - ${CONTENT_DIR}:/data
   #   ports:
   #     - "8686:8686"
   #   restart: unless-stopped
@@ -84,7 +84,7 @@ services:
       - PGID=1000
       - TZ=America/Edmonton
     volumes:
-      - ./provision/prowlarr:/config
+      - ${PROVISION_DIR}/prowlarr:/config
     ports:
       - 9696:9696
     restart: unless-stopped
@@ -102,7 +102,7 @@ services:
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=America/Edmonton
     volumes:
-      - ./provision/flaresolverr:/config
+      - ${PROVISION_DIR}/flaresolverr:/config
     ports:
       - "${PORT:-8191}:8191"
     restart: unless-stopped
@@ -117,8 +117,8 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ./provision/bazarr:/config
-  #     - ./content:/data
+  #     - ${PROVISION_DIR}/bazarr:/config
+  #     - ${CONTENT_DIR}:/data
   #   ports:
   #     - "6767:6767"
   #   restart: unless-stopped
@@ -134,8 +134,8 @@ services:
       - TZ=America/Edmonton
       #- DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
     volumes:
-      - ./provision/qbittorrent:/config
-      - ./content/torrents:/data/torrents
+      - ${PROVISION_DIR}/qbittorrent:/config
+      - ${CONTENT_DIR}/torrents:/data/torrents
     ports:
       - 8080:8080
       - 6881:6881
@@ -153,10 +153,10 @@ services:
     environment:
       - HOME=config
     volumes:
-      - ./provision/flood:/config
-      - ./content:/data
+      - ${PROVISION_DIR}/flood:/config
+      - ${CONTENT_DIR}:/data
     ports:
-      - 127.0.0.1:3001:3001
+      - 3001:3001
     restart: unless-stopped
     networks:
       - drake-media-network
@@ -169,7 +169,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ./provision/jackett:/config
+  #     - ${PROVISION_DIR}/jackett:/config
   #   ports:
   #     - "9117:9117"
   #   restart: unless-stopped
@@ -184,7 +184,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ./provision/ombi:/config
+  #     - ${PROVISION_DIR}/ombi:/config
   #   ports:
   #     - "3579:3579"
   #   restart: unless-stopped
@@ -199,7 +199,7 @@ services:
   #     - PGID=1000
   #     - TZ=America/Edmonton
   #   volumes:
-  #     - ./provision/heimdall:/config
+  #     - ${PROVISION_DIR}/heimdall:/config
   #   ports:
   #     - "80:80"
   #     - "443:443"
