--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.9'
+version: "3.9"
 
 services:
-
   # plex:
   #   image: plexinc/pms-docker
   #   container_name: plex
@@ -28,6 +27,159 @@ services:
   #   # networks:
   #   #   - drake-media-network
 
+  gluetun:
+    container_name: gluetun
+    image: qmcgaw/gluetun
+    stop_grace_period: 1m
+    cap_add:
+      - net_admin
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Edmonton
+      - VPN_SERVICE_PROVIDER=private internet access
+      - OPENVPN_USER=${OPENVPN_USER}
+      - OPENVPN_PASSWORD=${OPENVPN_PASSWORD}
+      - SERVER_REGIONS=CA Vancouver
+      - VPN_PORT_FORWARDING_PROVIDER=private internet access
+      - VPN_PORT_FORWARDING=on
+      - VPN_PORT_FORWARDING_STATUS_FILE=/gluetun/forwarded_port
+      - UPDATER_PERIOD=24h
+      - HTTP_CONTROL_SERVER_AUTH_CONFIG_FILEPATH=/gluetun/gluetun-control-server-config.toml
+    ports:
+      - 6380:6380
+      - 4443:4443
+      # HTTP proxy
+      - 8888:8888/tcp
+      # Shadowsocks
+      - 8388:8388/tcp
+      - 8388:8388/udp
+      # qBittorrent
+      - 8080:8080
+      - 6881:6881
+      - 6881:6881/udp
+      # flood
+      # - 3001:3001
+      # Radarr
+      - 7878:7878
+      # Sonarr
+      - 8989:8989
+      # Prowlarr
+      - 9696:9696
+      # Flaresolverr
+      - 8191:8191
+    restart: unless-stopped
+    volumes:
+      - ${PROVISION_DIR}/gluetun:/gluetun
+      - ./gluetun-control-server-config.toml:/gluetun/auth/config.toml
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          'echo "RUNNING HEALTHCHECK" && curl -m 5 -s https://www.privateinternetaccess.com/site-api/exposed-check --data-raw "{\"ipAddress\": \"`curl -m 5 -s ifconfig.co`\"}" | grep -q "false" && echo "HEALTHCHECK SUCCESS" || (echo "HEALTCHECK FAIL" && exit 1);',
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+      start_period: 15s
+
+  qbittorrent:
+    image: linuxserver/qbittorrent
+    container_name: qbittorrent
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Edmonton
+    volumes:
+      - ${PROVISION_DIR}/qbittorrent:/config
+      - ${CONTENT_DIR}/torrents:/data/torrents
+    restart: unless-stopped
+    network_mode: "service:gluetun"
+    depends_on:
+      - gluetun
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-H",
+          "Authorization: $GLUETUN_CONTROL_SERVER_AUTH_KEY",
+          "-s",
+          "http://localhost:8000/v1/openvpn/status",
+          "|",
+          "grep",
+          "-q",
+          '{"status":"running"}',
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+      start_period: 15s
+
+  # flood:
+  #   image: jesec/flood
+  #   container_name: flood
+  #   restart: unless-stopped
+  #   user: 1000:1000
+  #   command: --port 3001 --allowedpath /data
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - HOME=config
+  #   volumes:
+  #     - ${PROVISION_DIR}/flood:/config
+  #     - ${CONTENT_DIR}:/data
+  #   # ports:
+  #   #   - 3001:3001
+  #   network_mode: "service:gluetun"
+  #   depends_on:
+  #     - gluetun
+
+  gluetun-qbittorrent-port-manager:
+    image: patrickaclark/gluetun-qbittorrent-port-manager:latest
+    container_name: gluetun-qbittorrent-port-manager
+    restart: unless-stopped
+    volumes:
+      - ${PROVISION_DIR}/gluetun:/gluetun
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Edmonton
+      - QBITTORRENT_SERVER=localhost
+      - QBITTORRENT_PORT=8080
+      - PORT_FORWARDED=/gluetun/forwarded_port
+      - HTTP_S=http
+      # IP or FQDN of gluetun control server
+      - GLUETUN_HOST=localhost
+      # port of gluetun control server
+      - GLUETUN_PORT=8000
+      - RECHECK_TIME=60
+      - GLUETUN_CONTROL_SERVER_AUTH_KEY=${GLUETUN_CONTROL_SERVER_AUTH_KEY}
+    network_mode: "service:gluetun"
+    depends_on:
+      - gluetun
+      - qbittorrent
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-H",
+          "Authorization: $GLUETUN_CONTROL_SERVER_AUTH_KEY",
+          "-s",
+          "http://localhost:8000/v1/openvpn/status",
+          "|",
+          "grep",
+          "-q",
+          '{"status":"running"}',
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 5
+      start_period: 15s
+
   radarr:
     image: linuxserver/radarr
     container_name: radarr
@@ -38,11 +190,8 @@ services:
     volumes:
       - ${PROVISION_DIR}/radarr:/config
       - ${CONTENT_DIR}:/data
-    ports:
-      - "7878:7878"
     restart: unless-stopped
-    networks:
-      - drake-media-network
+    network_mode: "service:gluetun"
 
   sonarr:
     image: linuxserver/sonarr
@@ -54,11 +203,8 @@ services:
     volumes:
       - ${PROVISION_DIR}/sonarr:/config
       - ${CONTENT_DIR}:/data
-    ports:
-      - "8989:8989"
     restart: unless-stopped
-    networks:
-      - drake-media-network
+    network_mode: "service:gluetun"
 
   # lidarr:
   #   image: linuxserver/lidarr
@@ -85,11 +231,8 @@ services:
       - TZ=America/Edmonton
     volumes:
       - ${PROVISION_DIR}/prowlarr:/config
-    ports:
-      - 9696:9696
     restart: unless-stopped
-    networks:
-      - drake-media-network
+    network_mode: "service:gluetun"
 
   flaresolverr:
     image: ghcr.io/flaresolverr/flaresolverr:latest
@@ -103,11 +246,8 @@ services:
       - TZ=America/Edmonton
     volumes:
       - ${PROVISION_DIR}/flaresolverr:/config
-    ports:
-      - "${PORT:-8191}:8191"
     restart: unless-stopped
-    networks:
-      - drake-media-network
+    network_mode: "service:gluetun"
 
   # bazarr:
   #   image: linuxserver/bazarr
@@ -124,88 +264,3 @@ services:
   #   restart: unless-stopped
   #   networks:
   #     - drake-media-network
-
-  qbittorrent:
-    image: linuxserver/qbittorrent
-    container_name: qbittorrent
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Edmonton
-      #- DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
-    volumes:
-      - ${PROVISION_DIR}/qbittorrent:/config
-      - ${CONTENT_DIR}/torrents:/data/torrents
-    ports:
-      - 8080:8080
-      - 6881:6881
-      - 6881:6881/udp
-    restart: unless-stopped
-    networks:
-      - drake-media-network
-  
-  flood:
-    hostname: flood
-    image: jesec/flood
-    container_name: flood
-    user: 1000:1000
-    command: --port 3001 --allowedpath /data
-    environment:
-      - HOME=config
-    volumes:
-      - ${PROVISION_DIR}/flood:/config
-      - ${CONTENT_DIR}:/data
-    ports:
-      - 3001:3001
-    restart: unless-stopped
-    networks:
-      - drake-media-network
-
-  # jackett:
-  #   image: linuxserver/jackett
-  #   container_name: jackett
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=America/Edmonton
-  #   volumes:
-  #     - ${PROVISION_DIR}/jackett:/config
-  #   ports:
-  #     - "9117:9117"
-  #   restart: unless-stopped
-  #   networks:
-  #     - drake-media-network
-
-  # ombi:
-  #   image: linuxserver/ombi
-  #   container_name: ombi
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=America/Edmonton
-  #   volumes:
-  #     - ${PROVISION_DIR}/ombi:/config
-  #   ports:
-  #     - "3579:3579"
-  #   restart: unless-stopped
-  #   networks:
-  #     - drake-media-network
-
-  # heimdall:
-  #   image: linuxserver/heimdall
-  #   container_name: heimdall
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=America/Edmonton
-  #   volumes:
-  #     - ${PROVISION_DIR}/heimdall:/config
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #     # - "8083:80"
-  #   restart: unless-stopped
-  #   networks:
-  #     - drake-media-network
-networks:
-  drake-media-network:
