--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ provision/sonarr/*
 provision/radarr/*
 provision/plex/*
 provision/flood/*
+provision/flaresolverr/*
 
 # workspace files are user-specific
 *.sublime-workspace
