--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,24 @@ version: "3.9"
 
 services:
   # plex:
-  #   image: plexinc/pms-docker
+  #   image: linuxserver/plex
   #   container_name: plex
   #   environment:
   #     - PUID=1000
   #     - PGID=1000
+  #     # - PLEX_UID=1000
+  #     # - PLEX_GID=1000
+  #     # - CHANGE_CONFIG_DIR_OWNERSHIP=false
+  #     - TZ=America/Edmonton
   #     - VERSION=docker
-  #     - HOSTNAME=”PlexServer”
+  #     # - HOSTNAME=”PlexServer”
   #   volumes:
-  #     - ${PROVISION_DIR}/plex:/config
-  #     - ${CONTENT_DIR}/media:/data/media
+  #     - ${PROVISION_DIR}/plex/config:/config
+  #     - ${PROVISION_DIR}/plex/media:/data
+  #     - ${PROVISION_DIR}/plex/transcode:/transcode
   #   network_mode: host
-  #   # ports: # when network: bridge
-  #   #   - "32400:32400/tcp"
+  #   ports: # when network: bridge
+  #     - 32400:32400
   #   #   - "8324:8324/tcp" # Required if network: bridge
   #   #   - "32469:32469/tcp" # Required if network: bridge
   #   #   - "1900:1900/udp" # Required if network: bridge
@@ -22,10 +27,8 @@ services:
   #   #   - "32412:32412/udp" # Required if network: bridge
   #   #   - "32413:32413/udp" # Required if network: bridge
   #   #   - "32414:32414/udp" # Required if network: bridge
-  #   privileged: true # libusb_init failed
+  #   # privileged: true # libusb_init failed
   #   restart: unless-stopped
-  #   # networks:
-  #   #   - drake-media-network
 
   gluetun:
     container_name: gluetun
